fix reponsive for footer on tablet

--- a/style.css
+++ b/style.css
@@ -90,7 +90,8 @@ button{
 button:hover{
     background-color:var(--primaryColor);
 }
-@media only screen and (min-width: 360px){
+
+@media only screen and (max-width: 768px){
     .footer>*:not(.copy) {
         display: none;
     }
@@ -98,6 +99,7 @@ button:hover{
         text-align: center;
     }
 }
+
 .footer {
     padding: 0;
     position: fixed;
